--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  <div class="container">
    <div class="row text-center">
       <div class="col-md-12 text-center"><i class="fa fa-map-marker fa-3x"></i>
-        <p><a href="mailto:andy@trustdavis.io">contact@trustdavis.io</a></p>
+        <p><a href="mailto:andy@trustdavis.io">andy@trustdavis.io</a></p>
       </div>
    </div>
  </div>
